--- a/index.html
+++ b/index.html
@@ -4,9 +4,57 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Frank Music</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    
+    <div class="wrapper">
+        <div class="container-demo">
+            <header>
+                <h1>Playlist</h1>
+                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Reprehenderit maxime, dignissimos voluptates accusantium eos culpa.</p>
+                <nav>
+                    <ul class="left">
+                        <li><a href="#">New Releases</a></li>
+                        <li><a href="#">Most played songs</a></li>
+                        <li><a href="#">Albums</a></li>
+                    </ul>
+                    <ul class="right">
+                        <li><a href="#">About</a></li>
+                        <li><a href="#">The band</a></li>
+                        <li><a href="#">Contact</a></li>
+                        <li class="autoplay-btn">
+                            <a href="#">
+                                <label>
+                                    <h5>Autoplay</h5>
+                                    <input type="checkbox">
+                                    <span></span>
+                                </label>
+                            </a>
+                        </li>
+                    </ul>
+                </nav>
+            </header>
+
+            <div class="body-content">
+                <div class="title">
+                    <span></span>
+                    <span>Title</span>
+                    <span>Artist</span>
+                    <span>Genre</span>
+                    <span>Duration</span>
+                    <span></span>
+                    <span></span>
+                </div>
+                <div class="list">
+
+                </div>
+            </div>
+        </div>
+    </div>
+
+
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="script.js"></script>
 </body>
 </html>
