play/pause icon display

--- a/index.html
+++ b/index.html
@@ -65,14 +65,14 @@
             list_block = $('<div class="list_block"></div>');
             list.append(list_block);
 
-            list_block.append('<span class="play_btn"><img class="play_icon" src="./svg/play.svg" alt="" class="play_icon"><img class="pause-icon" src="./svg/pause.svg" alt="" class="play_icon"></span>')
+            list_block.append('<span class="play_btn"><img class="play_icon" src="./svg/play.svg" alt="" class="play_icon"><img class="pause_icon" src="./svg/pause.svg" alt="" class="play_icon"></span>')
             list_block.append('<span class="song_title">' + song_list[key].title + '</span>');
             list_block.append('<span class="song_artist">' + song_list[key].artist + '</span>');
             list_block.append('<span class="song_genre">' + song_list[key].genre + '</span>');
             list_block.append('<span class="song_duration">' + song_list[key].duration + '</span>');
             list_block.append('<span class="beat_animation"><ul><li></li><li></li><li></li><li></li><li></li><li></li></ul></span>');
             list_block.append('<span class="track"><audio id="audio" controls><source src="./songs/'+ song_list[key].track +'" type="audio/mp3"></audio></span>');
-            list_block.append('<span class="download-btn"><a target="_blank" href="./songs/'+ song_list[key].track +'"><img src="./svg/download.svg"></a></span>');
+            list_block.append('<span class="download_btn"><a target="_blank" href="./songs/'+ song_list[key].track +'"><img src="./svg/download.svg"></a></span>');
         }
 
         $(".list_block .play_btn .play_icon").on('click', function(current){
@@ -102,9 +102,11 @@
 
             $(this).parent().find(".pause_icon").css("display", "none");
             $(this).parent().find(".play_icon").css("display", "inline-block");
+
+            $(this).parent().parent().find(".beat_animation li").css("animation-play-state", "paused");
                             
         });
-        
+
     });
     </script>
 
